feat: enhance product search functionality with additional filters and sorting options; add average rating and review count to product entities